# flutter-sendme

./: .gitignore  CLAUDE.md  README.md  pubspec.yaml  sendme.txt  test_file.txt
.claude/: settings.local.json
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/sendme/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: sendme_provider.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: sendme.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/: Podfile
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  sendme_core.rs
rust/src/api/: mod.rs  sendme.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_sendme.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_sendme.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
