[package]
name = "rust_lib_sendme"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }
iroh = "0.95"
iroh-blobs = { version = "0.97" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
rand = "0.9.2"
hex = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
data-encoding = "2.6.0"
walkdir = "2.4.0"
num_cpus = "1.16.0"
n0-future = "0.3"
futures-buffered = "0.2.11"
bytesize = "1.3.0"
lazy_static = "1.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
